Various improvements.
- Implement new player data serialization
- Rebalanced AFK detection to 1 player per tick
- Small formatting fixes
- Using some new Java features